# polarsteps-data-parser

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  USAGE_GUIDE.md  pyproject.toml  ruff.toml
.github/workflows/: release.yaml  ruff-lint.yml
polarsteps_data_parser/: __main__.py  enrich_steps_with_comments.py  fonts.py  main.py  md_generator.py  model.py  parser.py  pdf_generator.py  retrieve_step_comments.py  utils.py
